# StudyCorr

./: .gitignore  CMakeLists.txt  Camera0_00000_0.csv  Camera0_00001_0.csv  Camera0_00002_0.csv  Camera0_00003_0.csv  README.md  build_release.bat  deformed.csv  reference.csv  show_u_v.ipynb
API/OpenCorr/src/: oc_array.cpp  oc_array.h  oc_calibration.cpp  oc_calibration.h  oc_deformation.cpp  oc_deformation.h  oc_dic.cpp  oc_dic.h  oc_epipolar_search.cpp  oc_epipolar_search.h  oc_feature.cpp  oc_feature.h  oc_feature_affine.cpp  oc_feature_affine.h  oc_fftcc.cpp  oc_fftcc.h  oc_gradient.cpp  oc_gradient.h  oc_icgn.cpp  oc_icgn.h  oc_image.cpp  oc_image.h  oc_interpolation.h  oc_io.cpp  oc_io.h  oc_nearest_neighbor.cpp  oc_nearest_neighbor.h  oc_poi.cpp  oc_poi.h  oc_point.cpp  oc_point.h  oc_sift.cpp  oc_sift.h  oc_stereovision.cpp  oc_stereovision.h  oc_strain.cpp  oc_strain.h  oc_subset.cpp  oc_subset.h  opencorr.h  (+1 more)
API/cuSIFT/: cudaSiftD.cuh  cudaSiftH.cu
StudyCorr/: Calibration.cpp  Calibration.h  CalibrationLoadDialog.cpp  CalibrationLoadDialog.h  ComputeLoadDialog.cpp  ComputeLoadDialog.h  Drawable.cpp  Drawable.h  Shape.cpp  Shape.h  StudyCorr.cpp  StudyCorr.h  StudyCorr.qrc  customPixmapItem.cpp  customPixmapItem.h  main.cpp
StudyCorr_CUDA/: sc_array.h  sc_cubic_bspline.cu  sc_cubic_bspline.h  sc_deformation.cuh  sc_dic.h  sc_feature.h  sc_feature_affine.cu  sc_feature_affine.h  sc_gradient.cu  sc_gradient.h  sc_icgn.cu  sc_icgn.h  sc_image.cu  sc_image.h  sc_interpolation.h  sc_nearest_neighbor.cu  sc_nearest_neighbor.h  sc_poi.h  sc_point.cu  sc_point.h  sc_sift.cu  sc_sift.h  sc_subset.cu  sc_subset.h
StudyCorr_GPU/: StudyCorr_GPU.h  sc_array.cpp  sc_array.h  sc_cubic_bspline.cpp  sc_cubic_bspline.h  sc_deformation.cpp  sc_deformation.h  sc_demo.cu  sc_epipolar_search.cu  sc_epipolar_search.h  sc_gradient.cpp  sc_gradient.h  sc_icgn.cu  sc_icgn.h  sc_icgn_device_function.cuh  sc_image.cpp  sc_image.h  sc_interpolation.h  sc_io.cpp  sc_io.h  sc_poi.cpp  sc_poi.h  sc_point.h  sc_sift.cu  sc_sift.h  sc_sift_affine.cu  sc_sift_affine.h  sc_subset.cpp  sc_subset.h
calibration_images/: Camera0_00000_0.csv  Camera0_00001_0.csv  Camera0_00002_0.csv  Camera0_00003_0.csv  Camera0_00004_0.csv  Camera0_00005_0.csv  Camera0_00006_0.csv
cmake/: FindQt6Custom.cmake
